<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ShopApp</string>
    <string name="action_settings">Settings</string>
    <string name="prompt">请输入您需要的商品!</string>
    <string name="submit">提交</string>
    <string name="app_name_goods_list">商品列表</string>
    <string name="newActivity">新建Activity</string>
    <string name="goods_list_item_description">商品介绍</string>
    <string name="app_name_catalog">分类</string>
    <string name="shopping_car">提交</string>
	<string name="app_name_shopping_car">购物车</string>
	<string name="buy">购买</string>
	<string name="app_name_register">注册（带*必填）</string>
	<string name="register_prompt_user_name">姓名*</string>
	<string name="register_prompt_user_password">密码</string>
	<string name="register_prompt_user_mobile_phone">手机*</string>
	<string name="register_prompt_user_phone">固定电话</string>
	<string name="register_prompt_user_address">地址*</string>
	<string name="register_prompt_user_email">Email</string>
	<string name="register_prompt_register">注册</string>
	<string name="main_register">注册</string>
	<string name="login">登陆</string>
	<string name="login_prompt_mobile_phone">请输入手机号</string>
	<string name="app_name_login">登陆</string>
    
</resources>
